--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "backpack/crud": "4.1.*",
         "backpack/filemanager": "^1.1",
         "backpack/settings": "^3.0",
+        "cijic/phpmorphy": "^0.3.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
