fix gulp for server

--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
             "js": "public/build/js",
             "fonts": "public/build/fonts"
         }
+    },
+    "scripts": {
+        "gulp": "gulp"
     }
 }
