--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "backpack/filemanager": "^1.1",
         "backpack/settings": "^3.0",
         "cijic/phpmorphy": "^0.3.1",
+        "cviebrock/eloquent-sluggable": "^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
