--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "@babel/core": "^7.6.0",
         "@babel/preset-env": "^7.6.0",
+        "bootstrap": "^4.6.0",
         "browser-sync": "^2.26.14",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^7.0.0",
@@ -12,8 +13,12 @@
         "gulp-sass": "^4.0.2",
         "gulp-svg-sprite": "^1.5.0",
         "gulp-uglify": "^3.0.2",
+        "jquery": "^3.6",
         "node-sass": "^4.14.1",
-        "require-dir": "^1.2.0"
+        "popper.js": "^1.16.1",
+        "require-dir": "^1.2.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
     },
     "browserslist": [
         "last 2 version",
