--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "mailchimp/marketing": "^3.0"
+        "mailchimp/marketing": "^3.0",
+        "spatie/laravel-medialibrary": "^7.0.0"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
