--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "abraham/twitteroauth": "^3.3",
         "backpack/crud": "4.1.*",
         "backpack/filemanager": "^1.1",
         "backpack/settings": "^3.0",
