--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,12 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 STEAM_API_KEY=
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_ACCESS_TOKEN=
+
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_KEY_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
